# pre-coral

./: Cargo.toml
protocol/: Cargo.toml
protocol-core/: Cargo.toml
protocol-core/src/: bool.rs  integer.rs  lib.rs  slice_codec.rs  str.rs  uuid.rs
protocol-macros/: Cargo.toml
protocol-macros/src/: attribute_util.rs  lib.rs
protocol-macros/src/attribute_util/: decoder.rs  encoder.rs
protocol/src/: types.rs
protocol/src/types/: behavior_pack_info.rs  cdn_url.rs  experiments.rs  login_request_tokens.rs  message_type.rs  packets.rs  resource_pack_client_responce_status.rs  resource_pack_info.rs  stack_addon_pack.rs
protocol/src/types/packets/: add_player.rs  client_to_server_handshake.rs  disconnect.rs  login.rs  play_status.rs  resource_pack_client_response.rs  resource_pack_stack.rs  resource_packs_info.rs  server_to_client_handshake.rs  set_time.rs  text.rs
protodef/: Cargo.toml
protodef/src/: lib.rs  slice.rs
protodef/src/integer/: mod.rs  u_varint.rs  u_varlong.rs  varint.rs  varlong.rs
raknet/: Cargo.toml
